--- a/my.cnf
+++ b/my.cnf
@@ -28,7 +28,7 @@ default-character-set=latin1
 user		= nobody
 port		= 3306
 socket		= /opt/lampp/var/mysql/mysql.sock
-skip-external-locking
+skip-external-lockƒing
 skip-name-resolve
 key_buffer = 16M
 max_allowed_packet = 20M
@@ -138,6 +138,8 @@ innodb_log_file_size = 5M
 innodb_log_buffer_size = 8M
 innodb_flush_log_at_trx_commit = 1
 innodb_lock_wait_timeout = 50
+
+datadir = {DIRECTORY}mysql
 
 [mysqldump]
 quick
