--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     image: mysql:5.5
     environment:
       - MYSQL_ROOT_PASSWORD=my-secret-pw
+      - TZ=Asia/Shanghai
     network_mode: host
     shm_size: 8g
     oom_kill_disable: true
